crates/compiler/src/tests/e2e/bad/0043_record_literal_parse_error/main.gom
struct Pair[A, B] {
    first: A,
    second: B,
}

fn main() {
    let p: Pair[uint8, uint8] = Pair {
        first: {
            let x: uint8 = 10;
            let y: uint8 = 20;
            x + y
        },
        second: 5,
    };
    println((p.first).to_string());
    println((p.second).to_string());
}
